# Teditor

./: .astylerc  .clang-format  .cmake-format.yaml  .dir-locals.el  .gitignore  .gitmodules  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  Config.hpp.cin  Makefile  font.h  main.c
3rd/SDL_FontCache/: CMakeLists.txt
3rd/librope/: CMakeLists.txt
3rd/librope/src/: rope.c
CMake/: DeclareModule.cmake
Modules/SdlWrapper/Include/SdlWrapper/: Context.hpp  Error.hpp  Renderer.hpp  VideoContext.hpp  Window.hpp
Modules/SdlWrapper/Include/SdlWrapper/FontCache/: Font.hpp
Modules/SdlWrapper/Source/: Context.cpp  Error.cpp  Renderer.cpp  VideoContext.cpp  Window.cpp
Modules/SdlWrapper/Source/FontCache/: Font.cpp
Modules/Teditor/Source/: Main.cpp
inc/SdlWrap/: FcFont.hpp  GraphicsContext.hpp  Renderer.hpp  TtfContext.hpp  TtfFont.hpp  Window.hpp
src/SdlWrap/: CMakeLists.txt  FcFont.cpp  GraphicsContext.cpp  Renderer.cpp  TtfContext.cpp  TtfFont.cpp  Window.cpp
src/Teditor/: Main.cpp  Teditor.cpp  Teditor.hpp
